# discord-bot

./: .env.example  .gitignore  AGENTS.md  AI_NOTES.md  README.md  render.yaml
backend/: pyproject.toml
backend/app/: config.py  database.py  deps.py  main.py
backend/app/models/: __init__.py  command_log.py  guild_config.py  pending_action.py  processed_interaction.py  user.py
backend/app/routes/: auth.py  dashboard.py  guilds.py  interactions.py
backend/app/services/: commands.py  dedup.py  discord_api.py  mirror.py  retry.py  verify.py
frontend/src/: App.css  App.tsx
frontend/src/api/: client.ts
frontend/src/components/: CommandLogTable.tsx  ProtectedRoute.tsx
frontend/src/context/: ToastContext.tsx
frontend/src/pages/: DashboardPage.tsx  LoginPage.tsx  SettingsPage.tsx
