[project]
name = "abstrabit-backend"
version = "0.1.0"
description = "Discord slash-command bot backend"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "email-validator>=2.3.0",
    "fastapi>=0.139.0",
    "httpx>=0.28.1",
    "psycopg2-binary>=2.9.12",
    "pydantic-settings>=2.14.2",
    "pynacl>=1.6.2",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.32",
    "sqlalchemy[asyncio]>=2.0.51",
    "uvicorn[standard]>=0.49.0",
]
